fix report-mode wrapping to 2 lines breaking layout

--- a/app/styles/base/_typography.scss
+++ b/app/styles/base/_typography.scss
@@ -330,6 +330,7 @@ button {
     font-size: rem-calc(10);
     text-transform: uppercase;
     float: right;
+    white-space: nowrap;
     margin-top: rem-calc(-10);
     border-radius: 4px;
     overflow: hidden;
